temel admin teması react ant design ile eklendi ve temel işlemler için kullanıcı,tarifler ve postlar ile ilgili crud işlemleri yapıldı

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,5 +1,8 @@
 @import 'tailwindcss';
 
+/* Ant Design Styles */
+@import 'antd/dist/reset.css';
+
 @plugin 'tailwindcss-animate';
 
 @source '../views';
